fixed some spacing

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -426,7 +426,12 @@ footer {
 .novena-container ol {
   margin-top: 1rem;
   list-style-type: upper-roman;
-  padding: 0 20px;
+  padding: 0 30px;
+}
+@media (max-width: 500px) {
+  .novena-container ol {
+    margin: 1rem 5% 0;
+  }
 }
 .novena-container .novena-options {
   display: flex;
