--- a/Pages/Novena/novena.less
+++ b/Pages/Novena/novena.less
@@ -40,7 +40,11 @@
     ol {
         margin-top: 1rem;
         list-style-type: upper-roman;
-        padding: 0 20px;
+        padding: 0 30px;
+
+        @media @phone {
+            margin: 1rem 5% 0;
+        }
     }
 
     .novena-options {
